--- a/htmls/CSS Layout/native-grid.html
+++ b/htmls/CSS Layout/native-grid.html
@@ -7,7 +7,7 @@
         width: 90%;
         max-width: 960px;
         margin: 0 auto;
-        display: grid
+        display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-gap: 20px;
       }
